--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -561,7 +561,7 @@ img {
 }
 
 .qualification__button {
-    font-size: var(--h3-font-size);
+    font-size: 0;
     font-weight: var(--font-medium);
     cursor: pointer
 }
@@ -1031,7 +1031,7 @@ img {
         font-size: var(--normal-font-size);
     }
     .qualification__data {
-        gap: .5rem;
+        gap: .8rem;
     }
 
     .services__container {
@@ -1065,6 +1065,13 @@ img {
     .testimonial__description {
         text-align: center;
     }
+
+    .qualification__button {
+        font-size: 0;
+        font-weight: var(--font-medium);
+        cursor: pointer;
+    }
+	
 }
 
 /* For medium devices */
@@ -1094,6 +1101,7 @@ img {
         grid-template-columns: .6fr;
         justify-content: center;
     }
+
 
     @media screen and (min-width: 768px) {
         .container {
@@ -1238,6 +1246,12 @@ img {
         }
         .footer__copy {
             margin-top: 4.5rem;
+        }
+
+        .qualification__button {
+            font-size: var(--h3-font-size);
+            font-weight: var(--font-medium);
+            cursor: pointer
         }
 
     }
